fix visibility bug with admin hide show link
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@108434 fd97a983-eea8-4f9b-9b74-e50290b97401

--- a/modules/ext.moodBar.dashboard/ext.moodBar.dashboard.css
+++ b/modules/ext.moodBar.dashboard/ext.moodBar.dashboard.css
@@ -303,6 +303,7 @@
 .fbd-item-response {
 	line-height: 2.1em;
 	position: relative;
+	float: left;
 }
 
 .fbd-item-response-icon {
@@ -424,6 +425,11 @@
 	font-size: 0.8em;
 	margin-left: 0.2em;
 	margin-right: 0.2em;
+}
+
+.fbd-item-permalink,
+.fbd-item-show,
+.fbd-item-hide {
 	visibility: hidden;
 }
 
